# twenty-forty-eight

./: .gitignore  Cargo.toml  README.md
docs/: README.md
examples/: cli_game.rs
src/: ai.rs  game.rs  lib.rs  main.rs  web.rs
src/ai/: adaptive_search.rs  advanced_evaluation.rs  chance_node_optimization.rs  evaluation.rs  iterative_deepening.rs  mod.rs  move_ordering.rs  optimized_evaluation.rs  search.rs  solver.rs
src/cache/: enhanced_transposition.rs  mod.rs  transposition.rs
src/game/: bitboard.rs  board.rs  mod.rs  moves.rs
src/utils/: hash.rs  mod.rs
static/: index.html
