[package]
name = "twenty-forty-eight"
version = "0.1.0"
edition = "2021"
description = "A high-performance AI solver for the 2048 game"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
repository = "https://github.com/yourusername/twenty-forty-eight"
keywords = ["game", "ai", "solver", "2048", "algorithm"]
categories = ["games", "algorithms"]

[lib]
name = "twenty_forty_eight"
path = "src/lib.rs"

[[bin]]
name = "twenty-forty-eight"
path = "src/main.rs"

[[example]]
name = "cli_game"
path = "examples/cli_game.rs"

[dependencies]
rand = "0.8"
lazy_static = "1.4"

[dev-dependencies]
criterion = "0.5"


